cleaned up code

--- a/index.html
+++ b/index.html
@@ -13,62 +13,65 @@
     <button class = 'selection-btn'>Scissors</button>
     <h3 class = 'round-outcome'></h3>
     <script>
-        function computerPlay(){
-            choiceArray = ["rock", "paper", "scissors"];
-            randomChoice = choiceArray[Math.floor(Math.random() * choiceArray.length)];
-            return randomChoice;
-        }
 
-        var selectedButton;
+        let selectedButton;
         buttons = (document.getElementsByClassName('selection-btn'));
 
         let userScore = 0;
         let compScore = 0;
+        
         for (i = 0; i < 3; ++i){
             buttons[i].addEventListener('click', function(){
                 selectedButton = this.innerHTML;
                 computerSelection = computerPlay();
-                console.log(selectedButton)
                 playRound(selectedButton,computerSelection);
             })
         }
 
+        function computerPlay(){
+            choiceArray = ["Rock", "Paper", "Scissors"];
+            randomChoice = choiceArray[Math.floor(Math.random() * choiceArray.length)];
+            return randomChoice;
+        }
+
+        function clearBtns(){
+            let header = document.querySelector('.selection-header');
+            header.style.display = 'none';
+            let buttons = document.getElementsByClassName('selection-btn');
+            for (i = 0; i < 3; ++i){
+                buttons[i].style.display = 'none';
+            }
+        }
 
         function playRound(playerSelection, computerSelection){
-            lowercaseSelection = playerSelection.toLowerCase();
             let announce;
-            if (lowercaseSelection === 'rock' && computerSelection === 'scissors'){
+            if (playerSelection === 'Rock' && computerSelection === 'Scissors'){
                 announce = 'You Win! Rock is wavier than Scissors';
                 userScore++;
             }
-            else if (lowercaseSelection === 'rock' && computerSelection === 'paper'){
+            else if (playerSelection === 'Rock' && computerSelection === 'Paper'){
                 announce = 'You Lose! Rock is less wavy compared Paper';
                 compScore++;
             }
-            else if (lowercaseSelection === 'scissors' && computerSelection === 'rock'){
+            else if (playerSelection === 'Scissors' && computerSelection === 'Rock'){
                 announce = 'You Lose! Scissors are less wavy compared to Rock';
                 compScore++;
             }
-            else if (lowercaseSelection === 'scissors' && computerSelection === 'paper'){
+            else if (playerSelection === 'Scissors' && computerSelection === 'Paper'){
                 announce = 'You Win! Scissors is wavier than Paper';
                 userScore++;
             }
-            else if (lowercaseSelection === 'paper' &&computerSelection === 'scissors'){
+            else if (playerSelection === 'Paper' &&computerSelection === 'Scissors'){
                 announce = 'You Lose! Paper is less wavy compared to Scissors';
                 compScore++;
             }
-            else if (lowercaseSelection === 'paper' &&computerSelection === 'rock'){
+            else if (playerSelection === 'Paper' &&computerSelection === 'Rock'){
                 announce = 'You Win! Paper is wavier than Rock';
                 userScore++;
             }
-            else if (lowercaseSelection === computerSelection){
-                function upperSelection(selection){
-                    let upperChar = selection[0].toUpperCase();
-                    let upperWord = selection.replace(selection[0], upperChar);
-                    return upperWord
-                }
-                announce = 'Tie! ' + upperSelection(lowercaseSelection) + ' and ' + upperSelection(computerSelection) + '. Equally wavy';
-                }
+            else if (playerSelection === computerSelection){
+                announce = 'Tie! ' + playerSelection + ' and ' + computerSelection + '. Equally wavy';
+            }
             if (userScore === 3){
                 announce = 'You win the game! ' + userScore + ' rounds to ' + compScore + '. You\'re ultra wavy';
                 clearBtns();
@@ -78,18 +81,9 @@
                 clearBtns();
             }
             document.querySelector('.round-outcome').innerHTML = `${announce}`
-            console.log(userScore);
             return;
         }
-        
-        function clearBtns(){
-            let header = document.querySelector('.selection-header');
-            header.style.display = 'none';
-            let buttons = document.getElementsByClassName('selection-btn');
-            for (i = 0; i < 3; ++i){
-                buttons[i].style.display = 'none';
-            }
-        }
+
     </script>
 </body>
 </html>
