--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wavy Rock, Paper, Scissors</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/font.css">
 </head>
 <body>
-    <h1>Wavy Rock, Paper, Scissors</h1>
-    <h2 class = 'selection-header'>Make your selection:</h2>
-    <button class = 'selection-btn'>Rock</button>
-    <button class = 'selection-btn'>Paper</button>
-    <button class = 'selection-btn'>Scissors</button>
-    <h3 class = 'round-outcome'></h3>
-
+    <h1>WAVY ROCK, PAPER, SCISSORS</h1>
+    <h2 class = 'selection-header'>MAKE YOUR SELECTION:</h2>
+    <div class = 'selection-buttons'>
+        <button class = 'selection-btn'>Rock</button>
+        <button class = 'selection-btn'>Paper</button>
+        <button class = 'selection-btn'>Scissors</button>
+    </div>
+    <div class ='scoreboard'>
+        <h3 class = 'round-outcome'></h3>
+        <h3 class = 'user-score'></h3>
+        <h3 class = 'ye-score'></h3>
+    </div>
+    <div class = 'restart-button'>
+        <button class = 'restart-btn'>New Game</button>
+    </div>
     <script src="scripts/scripts.js"></script>
 </body>
 </html>
