cleaned up code and changed disable buttons so the buttons have no outline when hover

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <button class = 'selection-btn'>Paper</button>
         <button class = 'selection-btn'>Scissors</button>
     </div>
+    <h3 class = 'counter'></h3>
     <div class ='scoreboard'>
+        <h3 class = 'ye-move'></h3>
         <h3 class = 'round-outcome'></h3>
         <h3 class = 'user-score'></h3>
         <h3 class = 'ye-score'></h3>
