--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Wavy Rock, Paper, Scissors</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/font.css">
+    <link rel="icon" 
+      type="image/png" 
+      href="images/pixel-bear-fav.png">
 </head>
 <body>
     <div class = 'intro-container'>
